refactoring package.json

--- a/package.json
+++ b/package.json
@@ -49,16 +49,8 @@
       "no-param-reassign": "off",
       "vue/require-default-prop": "off",
       "vue/no-v-html": "off",
-      "max-len": [
-        "error",
-        {
-          "code": 120
-        }
-      ],
-      "linebreak-style": [
-        "error",
-        "windows"
-      ]
+      "linebreak-style": "off",
+      "max-len": "off"
     }
   },
   "browserslist": [
